Testing random support hero

--- a/Ow Iron man project/page.html
+++ b/Ow Iron man project/page.html
@@ -7,9 +7,14 @@
     <script src="script.js" defer></script>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body onload="addSupportHerosToLists()">
 
-    
+    <div>
+        <button onclick="pickRandomSupport()">Show Random Support</button>
+    </div>
+    <div id="imageContainer">
+        
+    </div>
 
 </body>
 </html>
