--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="script.js" defer></script>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body onload="addHerosToLists()">
+<body onload="addHeroesToLists()">
     
     <div>
         <button onclick="pickRandomTank()">Show Random Tank</button>
