Update role mode button with new styling

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         
 
         <div id="roleModeButton">
-            <button onclick="goToRolePage()">Role Mode</button>
+            <button id="roleModeButtonStyle" onclick="goToRolePage()">Role Mode</button>
         </div>
         
     </div>
