Add role mode button div to index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="script.js" defer></script>
     <link rel="stylesheet" href="style.css">
 </head>    
-    <div id="menuButtons">
+    <div id="roleModeButtonDiv">
         
 
         <div id="roleModeButton">
