--- a/index.html
+++ b/index.html
@@ -13,11 +13,8 @@
 
         <div id="roleModeButton">
             <button id="roleModeButtonStyle" onclick="goToRolePage()">Role Mode</button>
-        </div>
-        
+        <div id="allModeButton">
+            <button id="allModeButtonStyle" onclick="goToAllPage()">All Mode</button>
     </div>
 </body>
-
-
-
 </html>
