BIG changes to positioning MASSIVELY overhauled the code behind the background, added background video support, changed buttons so they now default to the center of the page (can still be moved around dynamically), and split the home button off of the rest of the role mode buttons.

--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OW Ironman Picker</title>
-    <script src="script.js" defer></script>
-    <link rel="stylesheet" href="style.css">
-</head>    
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>OW Ironman Picker</title>
+        <script src="script.js" defer></script>
+        <link rel="stylesheet" href="style.css">
+    </head>    
     
-<body>
-    <div id="roleModeButtonDiv">
-
-        <div id="roleModeButton">
-            <button id="roleModeButtonStyle" onclick="goToRolePage()">Role Mode</button>
+    <body>
+        <div class="content">
+            <video autoplay loop muted plays-inline class="backgroundVideo">
+                <source src="./assets/owbg.mp4" type="video/mp4">
+            </video>
+            <div id="roleModeButtonDiv">
+                <div id="roleModeButton">
+                    <button id="roleModeButtonStyle" onclick="goToRolePage()">Role Mode</button>
+                </div>      
+            </div>
         </div>
-        
-    </div>
-</body>
-
-
-
+    </body>
 </html>
